@@ -28,9 +28,10 @@
       </center>
       <br>
       <center>
-       General Information :&nbsp;
+       <a href="elections.html">General Information</a> :&nbsp;
        <a href="electionrules.html">Rules & Timeline</a> :&nbsp;
        List of candidates : &nbsp;
+       <a href="overview.html">Director Overview</a> :&nbsp;
        <a href="election-2000.html">2000</a>
       </center>
      </td>
@@ -39,10 +40,13 @@
     <!-- End of Boilerplate --> 
      <tr>
        <td>
+
+<br>
+
 <center>
-<H3>Candidates for GNOME Foundation Elections</H3>
+<H2>Candidates for Fall 2001 GNOME Foundation Elections</H2>
 <P>Nov 10, 2001</P>
-<P><BR><BR></P>
+<P><BR></P>
 </center>
 
 <P>Below you will find a list of candidates who are running for the
@@ -54,7 +58,7 @@ foundation-list@gnome.org
 (<A HREF="http://mail.gnome.org/archives/foundation-list/">http://mail.gnome.org/archives/foundation-list/</A>).</P>
 <P>When deciding who you should vote for, please carefully consider
 the various tasks the Board of Directors must perform. This overview
-(<A HREF="/overview.html">http://foundation.gnome.org/overview.html</A>)
+(<A HREF="overview.html">http://foundation.gnome.org/overview.html</A>)
 may be helpful. Keep in mind that the board will make a number of
 important decisions and will also have to perform many tasks which
 require a significant amount of time and effort and the ability to
@@ -64,7 +68,7 @@ a very real way. It is a good idea to strive for a well-balanced
 board consisting of people with various backgrounds, skills, and
 perspectives.</P>
 <P>Additional election details can be found at the end of this
-message and on <A HREF="/">http://foundation.gnome.org</A>
+message and on <A HREF="http://foundation.gnome.org">http://foundation.gnome.org</A>
 (where you can also find this document).</P>
 <P>If you have any questions, please send them to either
 foundation-list@gnome.org or to us at elections@gnome.org.</P>
@@ -399,7 +403,7 @@ candidates of your choice, with no restrictions, except that you
 cannot vote more than once for the same candidate.</P>
 
 <P>Additional election-related materials are available at
-<A HREF="/">http://foundation.gnome.org</A>.</P>
+<A HREF="http://foundation.gnome.org">http://foundation.gnome.org</A>.</P>
 
      </td>
     </tr>
