@@ -23,7 +23,7 @@
        <a href="organization.html">Organization</a> :&nbsp;
        <a href="documentation.html">Documentation</a> :&nbsp;
        <a href="membership.html">Membership</a> :&nbsp;
-       <a href="elections.html">Elections</a> :&nbsp;
+       Elections :&nbsp;
        <a href="directory.html">Directory</a>
       </center>
       <br>
